--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
     <title>Jogo do Mario</title>
 </head>
-<body>
-    
 
-    
+<body>
+
+    <div class="game-board">
+        <img src="img/nuvem.png" class="nuvem">
+        <img src="img/mario.gif" class="mario">
+        <img src="img/tubo.png" class="tubo">
+
+    </div>
+
 </body>
+
 </html>
